# etsyresearch

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  queries.txt  requirements.txt
config/: anchor_terms.txt  default.yaml  domains.yaml  keywords.txt
sandcastle/: __init__.py  cli.py  config.py  models.py
sandcastle/collectors/: brave.py  ddg.py  searxng.py
sandcastle/processor/: canonicalize.py  clustering.py  dedupe.py  filters.py  terms.py  text.py
tests/: test_canonicalization.py  test_clustering.py  test_dedupe.py  test_terms.py
