[project]
name = "sandcastle"
version = "0.1.0"
description = "Deterministic multi-phase search pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Codex"}]
dependencies = [
  "click>=8.1",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "rapidfuzz>=3.6",
  "requests>=2.31",
]

[project.optional-dependencies]
ddg = ["duckduckgo-search>=5.3"]

[project.scripts]
sandcastle = "sandcastle.cli:main"

[tool.setuptools.packages.find]
include = ["sandcastle*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
